--- a/simple-frontend/package.json
+++ b/simple-frontend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@headlessui/react": "^1.7.19",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "socket.io": "^4.8.0",
+    "socket.io-client": "^4.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
