--- a/flask-server/requirements.txt
+++ b/flask-server/requirements.txt
@@ -1,37 +1,4 @@
-aiohappyeyeballs==2.4.3
-aiohttp==3.10.10
-aiosignal==1.3.1
-async-timeout==4.0.3
-attrs==24.2.0
-bidict==0.23.1
-blinker==1.8.2
-click==8.1.7
-colorama==0.4.6
-fastjsonschema==2.20.0
-Flask==3.0.3
-Flask-SocketIO==5.4.1
-frozenlist==1.4.1
-h11==0.14.0
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.4
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter_core==5.7.2
-MarkupSafe==3.0.2
-multidict==6.1.0
-nbformat==5.10.4
-pigar==2.1.6
-platformdirs==4.3.6
-propcache==0.2.0
-python-engineio==4.10.1
-python-socketio==5.11.4
-pywin32==308
-referencing==0.35.1
-rpds-py==0.20.0
-simple-websocket==1.1.0
-traitlets==5.14.3
-typing_extensions==4.12.2
-Werkzeug==3.0.4
-wsproto==1.2.0
-yarl==1.16.0
+Flask==2.2.3
+Flask_Cors==3.0.10
+Flask_SocketIO==5.4.1
+Werkzeug==2.2.2
