--- a/new-pi-server/package.json
+++ b/new-pi-server/package.json
@@ -9,7 +9,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "postgres": "^3.4.5",
     "socket.io": "^4.8.1"
   }
 }
